Add Item to wishlist (#131)
* Starting with add item to wishlist

* Add item to wishlist

* Create wishlist and Specs

--- a/app/styles/directives/action-button.scss
+++ b/app/styles/directives/action-button.scss
@@ -7,6 +7,13 @@
   text-align: center;
   text-transform: uppercase;
   width: auto;
+  &.disable {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+  &.enable {
+    opacity: 1;
+  }
   &.yellow {
     @include action-button-color($base-yellow);
   }
