--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,6 +43,7 @@
 @import "error/error";
 @import "menu/menu";
 @import "products/show";
+@import "products/add-to-wishlist";
 @import "profile/profile";
 @import "profile/profile-addresses";
 @import "profile/profile-addresses-update";
