--- a/app/templates/directives/action-button/action-button.jade
+++ b/app/templates/directives/action-button/action-button.jade
@@ -2,5 +2,6 @@ button.action-button(
   ng-click='abVm.onButtonClick()'
   ng-class='abVm.customColor'
   type='abVm.type'
+  class="{{abVm.ngDisabled ? 'disable' : 'enable'}}"
 )
   span {{::abVm.text}}
