--- a/app/templates/product/show.jade
+++ b/app/templates/product/show.jade
@@ -24,11 +24,17 @@ ion-view(
         h4 Observaciones
         textarea(ng-model='productVm.item.observaciones')
         .add-product
-          button.button.button-outline.button-energized(ng-click="::productVm.addToCart()"
-                                                        ng-disabled="!productVm.item.cantidad")
-            | {{::("product.addCar"|translate)}}
-          button.button.button-outline.button-positive
-            | {{::("product.addWishlist"|translate)}}
+          action-button.add-product-button(
+            ng-click="productVm.runAction(productVm.actions.cart)"
+            ng-disabled="!productVm.item.cantidad"
+            text="{{::('product.addCar'|translate)}}"
+          )
+          action-button.add-product-button(
+            ng-click="productVm.runAction(productVm.actions.wishlist)"
+            text="{{::('product.addWishlist'|translate)}}"
+            ng-disabled="!productVm.item.cantidad"
+            color="blue"
+          )
   ion-footer-bar.bar-stable(align-title='center')
     .footer-product
       .left-panel
