customer profile para pull request (#127)
* editar perfil de customer -- err backend

* perfil de compradore, template

* perfile de cliente - correcciones

* perfil de cliente con clases .col.col-label

* template perfil 90% del boceto - para revisar

--- a/app/templates/profile/info/edit.jade
+++ b/app/templates/profile/info/edit.jade
@@ -2,14 +2,14 @@ ion-modal-view.client-page
   ion-header-bar.bar.bar-header.bar-light.bar-base-yellow(
     align-title="center"
   )
-    h4{{::("globals.edit"|translate)}}
+    h4 {{::("globals.edit"|translate)}}
     .ion-nav-buttons(side="left")
       button.button.ion-chevron-left.button-clear.left(
         ng-click="piVm.closeModal()"
       )
   ion-content.resource-form
     form(
-      name="form"
+      name="piVm.updateProfileForm"
       ng-submit="piVm.submitProcess(piVm.userEdit)"
       novalidate
     )
@@ -18,7 +18,7 @@ ion-modal-view.client-page
 
         label.item.item-input.item-stacked-label
           span.input-label {{::("item.imagen"|translate|uppercase)}}
-          input(
+          input.button.ion-button(
             type='file'
             ngf-select
             ng-model="piVm.userEdit.custom_image"
@@ -27,15 +27,21 @@ ion-modal-view.client-page
         show-error(array-messages='piVm.user.custom_image')
 
         label.item.item-input.item-stacked-label(
-          ng-class="{'item-error': piVm.messages.email}"
+          ng-class="{'item-error': piVm.updateProfileForm.email.$touched && piVm.updateProfileForm.email.$invalid}"
         )
           span.input-label {{::("user.email"|translate)}}
           input(
-            type="text"
+            type="email"
+            name="email"
             ng-model="piVm.userEdit.email"
             ng-class="input-error"
+            required
           )
-        show-error(array-messages="piVm.messages.email")
+        .errors-wrapper
+          span.show-errors(ng-messages="piVm.updateProfileForm.email.$error" ng-if="piVm.updateProfileForm.email.$touched")
+            span.message-error(ng-message="required") Campo requerido
+            span.message-error(ng-message="email") E-mail no válido
+          show-error(array-messages="piVm.messages.email")
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': piVm.messages.fecha_de_nacimiento}"
@@ -67,7 +73,8 @@ ion-modal-view.client-page
         show-error(array-messages="piVm.messages.ciudad")
 
       .bar.bar-footer
-        action-button(
+        input.button.button-primary(
           type="submit"
           text="{{::('globals.save'|translate)}}"
+          ng-class='{disabled: piVm.updateProfileForm.$invalid}'
         )
