--- a/app/styles/profile/profile.scss
+++ b/app/styles/profile/profile.scss
@@ -1,21 +1,81 @@
 .profile-page {
-  margin-top: 5rem;
+  margin-top: 1rem;
+
   .profile-header {
     text-align: center;
-    height: 5rem;
+    padding: 2rem;
+    height: 21rem;
     .user-name {
       font-family: Montserrat-Light;
       font-size: 2rem;
+      margin: 2rem;
+      color: $dark;
+
+      @media (max-width: $grid-responsive-md-break) {
+        font-size: 1.2rem;
+        margin: 1rem;
+      }
     }
+
+    .img-profile {
+      height: 12rem;
+      width: 12rem;
+      border-radius: 50%;
+      margin-top: 1rem;
+
+      @media (max-width: $grid-responsive-md-break) {
+        height: 6rem;
+        width: 6rem;
+      }
+
+    }
+
+    @media (max-width: $grid-responsive-md-break) {
+      height: 12rem;
+    }
+
   }
+
   .profile-body {
+
     .state-tabs {
       .tab-item {
         text-transform: uppercase;
       }
     }
+
+    .btn-edit {
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+
+    .row {
+      border-bottom: 0.1rem solid $energized;
+      padding: 0;
+
+      .col {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+
+        @media (max-width: $grid-responsive-md-break) {
+          margin-bottom: 0;
+        }
+      }
+
+      .col-label {
+        border-right: 0.1rem solid $energized;
+        color: #8f8f8f;
+      }
+
+      .col-value{
+        text-align: center;
+        color: $dark;
+      }
+    }
+
     .profile-index {
       margin-top: 2rem;
     }
+
   }
 }
