--- a/app/templates/profile/profile.jade
+++ b/app/templates/profile/profile.jade
@@ -1,6 +1,8 @@
 ion-content(scroll="false")
   .profile-page
-    .profile-header
+    .profile-header.responsive-sm
+      .col.col-offset-25.col-50
+        img.img-profile(src="images/camera.png")
       .user-name
         |{{ siteVm.userName() }}
     .profile-body
