fix cta btn in profile updating

--- a/app/templates/profile/info/edit.jade
+++ b/app/templates/profile/info/edit.jade
@@ -75,6 +75,6 @@ ion-modal-view.client-page
       .bar.bar-footer
         input.button.button-primary(
           type="submit"
-          text="{{::('globals.save'|translate)}}"
+          value="{{::('globals.save'|translate)}}"
           ng-class='{disabled: piVm.updateProfileForm.$invalid}'
         )
