Establishment in progress (#80)
* Listar y crear Establecimientos - Trabajo en progreso

* Edition of establishments and code correction

* Refactorización de código, eliminación de una establecimiento (Falta consumir el endpoint), integración con google maps (Falta buscar la dirección exacta del establecimiento)

* Servicio Map e integración en detalle del Establecimiento o sucursales

* Update Servicio Maps for detail establishments

* Refactorización de código

* Refactorización de codigo

* Cambio de fecha moment y consumo de servicio get para obtener el office

* Refactorización servicio

* Consumo servicio get Office

* Consumo del endpoint para obtener un Office y guardado por defecto enabled=false

* Remove localstore

* Refactorización de link

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -48,4 +48,5 @@
 @import "profile/profile-addresses";
 @import "profile/profile-addresses-update";
 @import "couriers/orders";
-@import "billing-addresses/billing-addresses"
+@import "billing-addresses/billing-addresses";
+@import "offices/offices";
