--- a/app/styles/item/item.scss
+++ b/app/styles/item/item.scss
@@ -116,4 +116,9 @@
     border: 3px solid $base-yellow;
     color: $base-yellow;
   }
+  .button-secondary-red {
+    @extend .button-secondary;
+    border: 3px solid $button-red;
+    color: $button-red;
+  }
 }
