--- a/app/templates/menu/menu-provider.jade
+++ b/app/templates/menu/menu-provider.jade
@@ -19,7 +19,7 @@ ion-side-menus(enable-menu-with-back-views='false')
           | {{::("menu.provider.account"|translate)}}
         ion-item
           | {{::("menu.provider.dispatchers"|translate)}}
-        ion-item
+        ion-item(menu-close='' ui-sref='provider.offices')
           | {{::("menu.provider.establishments"|translate)}}
         ion-item
           | {{::("menu.provider.promotionsAndDiscounts"|translate)}}
