--- a/app/styles/forms/inputs.scss
+++ b/app/styles/forms/inputs.scss
@@ -9,6 +9,10 @@ input {
   border-left: none;
   border-right: none;
   border-top: none;
+
+  &--no-borders {
+    border-bottom: none;
+  }
 }
 
 .select-position-adjust {
