--- a/app/styles/forms/resource-form.scss
+++ b/app/styles/forms/resource-form.scss
@@ -39,13 +39,37 @@
       &[type=text],
       &[type=email],
       &[type=number],
-      &[type=password] {
+      &[type=password],
+      select {
         padding-left: 15px;
         padding-bottom: 0;
         padding-top: 0;
         font-size: 16px;
         height: 25px;
       }
+    }
+  }
+
+  label.item-stacked-label.item-input--no-borders {
+    margin-bottom: 0;
+  }
+
+  label.item-input.item-select {
+    padding-bottom: 20px;
+
+    &:after {
+      top: 40px;
+    }
+
+    select {
+      left: 0;
+      top: 34px;
+      width: 100%;
+      max-width: 100%;
+      right: initial;
+      direction: ltr;
+      font-size: 16px;
+      font-family: Montserrat-Light;
     }
   }
 
