--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -37,7 +37,8 @@
 @import "directives/slick-provider";
 @import "categories/index";
 @import "categories/show";
-@import "item/item";
+@import "item/index";
+@import "item/form";
 @import "client/client";
 @import "wishlist/wishlist";
 @import "error/error";
