--- a/app/styles/overrides/bar-header.scss
+++ b/app/styles/overrides/bar-header.scss
@@ -16,7 +16,7 @@
     background-image: url('../images/logo-blanco.png');
   }
 
-  .ion-navicon {
+  .ion-navicon, .button {
     color: $white;
   }
 }
