--- a/app/templates/item/items.jade
+++ b/app/templates/item/items.jade
@@ -3,34 +3,40 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
-  ion-content.item-page
+  ion-content.item-index-page
     .row
-        label.search-input
-          i.icon.ion-search.placeholder-icon
-          input(
-            ng-model="itemsVm.query"
-            type="text"
-            placeholder='{{::("item.itemSearch"|translate)}}'
-          )
-    .row.footer-item-container
-      button.button-secondary-yellow(
-        ng-click="itemsVm.showNewModal()"
-      ) {{::("globals.new"|translate)}} {{::("item.item"|translate)}}
-    .row.list-header
-      .col.col-50.list-title {{::("item.productName"|translate)}}
-      .col.col-20.list-title {{::("item.quantity"|translate)}}
-      .col.col-20.list-title {{::("item.price"|translate)}}
-      .col.col-10.list-title
-    span(ng-if="!itemsVm.items.length" class="col without-items") {{::("item.titleWithoutItems"|translate)}}
-    span(ng-if="!itemsVm.items.length" class="col without-items") {{::("item.subtitleWithoutItems"|translate)}}
-    .row.list-content(
-      ng-repeat="item in itemsVm.items | filter:itemsVm.query"
-      ng-init="idx = $index"
-    )
-      .col.col-50.list-item {{ item.titulo }}
-      .col.col-20.list-item
-        span(ng-if="item.unidad_medida=='unidades'") X{{ item.volumen }}
-      .col.col-20.list-item ${{ item.precio_cents/100 }}
-      a.col.action(
-        ng-click="itemsVm.showEditModal(idx)"
-      ) {{::("globals.edit"|translate)}}
+      label.item.search-input
+        i.icon.ion-search.placeholder-icon
+        input(
+          ng-model="itemsVm.query"
+          type="text"
+          placeholder='{{::("item.itemSearch"|translate)}}'
+        )
+
+    .row
+      .list.list--centered
+        button.button.button-outline.button-energized(
+          ng-click="itemsVm.launchModal()"
+        ) {{::("globals.new"|translate)}} {{::("item.item"|translate)}}
+
+    .list.list-inset.list--no-borders
+      .row.item.table-headers
+        .col.col-60 {{::("item.productName"|translate)}}
+        .col.col-15 {{::("item.quantity"|translate)}}
+        .col.col-25 {{::("item.price"|translate)}}
+
+      .col.without-items(ng-if="!itemsVm.items.length")
+        p {{::("item.titleWithoutItems"|translate)}}
+        p {{::("item.subtitleWithoutItems"|translate)}}
+
+      .item.row(
+        ng-repeat="item in itemsVm.items | filter:itemsVm.query"
+        ng-init="idx = $index"
+      )  
+        .col.col-60
+          .provider-item-title(
+            ng-click="itemsVm.showEditModal(idx)"
+          ) {{ item.titulo }}
+        .col.col-15
+          span(ng-if="item.unidad_medida=='unidades'") X {{ item.volumen }}
+        .col.col-25 $ {{ item.precio_cents/100 }}
