--- a/app/templates/product/add-to-wishlist.jade
+++ b/app/templates/product/add-to-wishlist.jade
@@ -37,6 +37,6 @@ ion-modal-view.add-to-wishlist
         )
         action-button(
           on-click="productVm.clearData()"
-          text="{{::('product.modalButtonCancel'|translate)}}"
+          text="{{::('globals.cancel'|translate)}}"
           color="blue"
         )
