--- a/app/templates/wishlist/new.jade
+++ b/app/templates/wishlist/new.jade
@@ -18,6 +18,6 @@ ion-modal-view.wishlist-page
           )
           action-button(
             on-click="wishlistsVm.runAction(wishlistsVm.actions.cancel)"
-            text="{{::('wishlist.cancel'|translate)}}"
+            text="{{::('globals.cancel'|translate)}}"
             color="red"
           )
