--- a/app/styles/login/general.scss
+++ b/app/styles/login/general.scss
@@ -22,6 +22,10 @@
     max-width: 320px;
     margin-left: auto;
     margin-right: auto;
+
+    @media (max-width: $grid-responsive-sm-break) {
+      padding: 0 10px 1px 10px;
+    }
   }
 
   form {
