--- a/app/templates/offices/offices.jade
+++ b/app/templates/offices/offices.jade
@@ -4,8 +4,8 @@ ion-view(
   ion-nav-title
     .alt-logo
   ion-content
-    .row.footer-item-container
-      button.button-secondary-yellow(
+    .row.col.text-center
+      button.action-button.yellow(
         ng-click="officesVm.showNewOffice()"
       ) {{::("globals.new"|translate)}} {{::("office.office"|translate)}}
     .row.content-office
