--- a/app/templates/billing-addresses/new-edit.jade
+++ b/app/templates/billing-addresses/new-edit.jade
@@ -1,13 +1,12 @@
 ion-modal-view.item-page
-  ion-header-bar.bar.bar-header.bar-light.bar-base-yellow(
+  ion-header-bar.bar-stable.bar.bar-header(
     align-title="center"
   )
-    h4(ng-hide="billingAddressesVm.billingAddress.id").title {{::("billingAddress.newBillingAddress"|translate|uppercase)}}
-    h4(ng-show="billingAddressesVm.billingAddress.id").title {{::("globals.edit"|translate|uppercase)}} {{::("billingAddress.legendForm"|translate|uppercase)}}
     .ion-nav-buttons(side="left")
       button.button.ion-chevron-left.button-clear.left(
         ng-click="billingAddressesVm.closeModal()"
       )
+    .title.alt-logo
   ion-content.resource-form
     form(
       name='billingAddressesVm.form'
@@ -15,6 +14,9 @@ ion-modal-view.item-page
       novalidate
     )
       .list.list-inset
+        legend(ng-hide="billingAddressesVm.billingAddress.id").title {{::("billingAddress.newBillingAddress"|translate|uppercase)}}
+        legend(ng-show="billingAddressesVm.billingAddress.id").title {{::("globals.edit"|translate|uppercase)}} {{::("billingAddress.legendForm"|translate|uppercase)}}
+
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': billingAddressesVm.form.ruc.$touched && billingAddressesVm.form.ruc.$invalid}"
           )
@@ -94,6 +96,6 @@ ion-modal-view.item-page
           )
         show-error(array-messages="billingAddressesVm.messages.telefono")
 
-      .bar.bar-footer.footer-item-container
-        button.button-secondary-yellow(type="submit")
-          {{::("globals.save"|translate)}}
+      .bar.bar-footer
+        row.col.text-center
+          button.action-button.yellow(type="submit") {{::("globals.save"|translate)}}
