Refactorización de codigo

--- a/app/templates/dispatchers/detail.jade
+++ b/app/templates/dispatchers/detail.jade
@@ -15,10 +15,10 @@ ion-view(
     .row
         table.table
           tr
-            td.opacity {{::("dispatchers.id"|translate)}}
+            td.opacity {{::("globals.id"|translate)}}
             td.text-center {{dispatchersVm.dispatcherDetail.id}}
           tr
-            td.opacity {{::("dispatchers.dispacherEmail"|translate)}}
+            td.opacity {{::("globals.email"|translate)}}
             td.text-center {{dispatchersVm.dispatcherDetail.email}}
           tr
             td.opacity {{::("dispatchers.dispacherOffice"|translate)}}
