--- a/app/templates/dispatchers/dispatchers.jade
+++ b/app/templates/dispatchers/dispatchers.jade
@@ -19,7 +19,7 @@ ion-view(
 
     .row
       .col.col-10
-        strong {{::("dispatchers.id"|translate|uppercase)}}
+        strong {{::("globals.id"|translate|uppercase)}}
       .col.col-80
         strong {{::("dispatchers.dispatcher"|translate|uppercase)}}
       .col.col-10
@@ -27,11 +27,11 @@ ion-view(
      .row.col
         hr.opacity
 
-    .row(ng-repeat='item in dispatchersVm.dispatchers| filter: dispatchersVm.filtro')
-      .col.col-10{{item.id}}
+    .row(ng-repeat='item in dispatchersVm.dispatchers | filter: dispatchersVm.filtro track by $index')
+      .col.col-10{{$index+1}}
       .col.col-80{{item.email}}
       .col.col-10.text-right
-        a(ui-sref='provider.dispatcher({ id: item.id})'){{::("globals.seeMore"|translate)}}
+        a(ui-sref='provider.dispatchers.show({ id: item.id})'){{::("globals.seeMore"|translate)}}
 
     .row.margin(ng-show="!dispatchersVm.dispatchers.length")
       .col.text-center
