Consumo endpoint get y correción de errores

--- a/app/templates/dispatchers/detail.jade
+++ b/app/templates/dispatchers/detail.jade
@@ -22,6 +22,4 @@ ion-view(
             td.text-center {{dispatchersVm.dispatcherDetail.email}}
           tr
             td.opacity {{::("dispatchers.dispacherOffice"|translate)}}
-            td.text-center {{dispatchersVm.dispatcherDetail.sucursal}}
-
-
+            td.text-center {{dispatchersVm.dispatcherDetail.provider_office.direccion}}
